@@ -24,6 +24,9 @@ KERNEL_ARCH:=$(shell $(SHELL) -c "echo \"$(ARCH)\" | sed -e \"s/-.*//\" \
 include toolchain/kernel-headers/kernel-headers-new.makefile
 
 $(DL_DIR)/$(LINUX_HEADERS_SOURCE):
+ifeq ($(BR2_KERNEL_HEADERS_SNAP),y)
+	$(error No local $@ found, cannot continue. Are you sure you wanted to enable BR2_KERNEL_HEADERS_SNAP?)
+endif
 	$(call DOWNLOAD,$(LINUX_HEADERS_SITE),$(LINUX_HEADERS_SOURCE))
 
 kernel-headers: $(LINUX_HEADERS_DIR)/.configured
